Feature/products catalog crud (#3)
* Products Catalog CRUD

Products, Categories Models Created

Database Driver Module

Database Query Model/Package

Products,Categories Repositories

Products,Categories Services Definitions

Products,Categoriess Controllers

Swagger Autogenerated Documentation

Respositories, Services, Controllers Unit/Integrations Basic Tests

* Products Catalog CRUD

Products, Categories Schema Validators

Mongo Schema Definitions

Swagger Docuemntation Models

Autogenerated TSOA Routes

Include CORS

* Products Catalog CRUD

Basic Auth Middleware

Custom Errors Handler

Path NotFound Handler

Swagger UI

Tests Coverage

Singleton Pattern In Resources

* Products Catalog CRUD

Updated Readme

extends tosa api specification

implement ioc containers in test

include launch.json to enable vs code debuging

tso config extended to include authentication module and enable @Security decorator

database indexes for better performance

json schema models implemented in mongo collections

* tsoa params issue

* conflicts and tsoa issues
